hugr-llvm/src/extension/snapshots/hugr_llvm__extension__int__test__inarrow_s_3_2@llvm20.snap
---
source: hugr-llvm/src/extension/int.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@0 = private unnamed_addr constant [25 x i8] c"Can't narrow into bounds\00", align 1

define private { i1, { i32, ptr }, i8 } @_hl.main.1(i8 %0) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %upper_bounds_check = icmp sgt i8 %0, 7
  %lower_bounds_check = icmp slt i8 %0, -8
  %outside_range = or i1 %upper_bounds_check, %lower_bounds_check
  %inbounds = xor i1 %outside_range, true
  %1 = insertvalue { i1, { i32, ptr }, i8 } { i1 true, { i32, ptr } poison, i8 poison }, i8 %0, 2
  %2 = select i1 %inbounds, { i1, { i32, ptr }, i8 } %1, { i1, { i32, ptr }, i8 } { i1 false, { i32, ptr } { i32 2, ptr @0 }, i8 poison }
  ret { i1, { i32, ptr }, i8 } %2
}
